WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81782
Web Inspector: event listener section doesn't show all event listeners of the element ancestors
https://bugs.webkit.org/show_bug.cgi?id=81782
Summary
Web Inspector: event listener section doesn't show all event listeners of the...
Yury Semikhatsky
Reported
2012-03-21 07:40:20 PDT
If selected node doesn't have any listener then the section will be empty. Currently ancestors event listeners are filtered by event listener names of the selected node.
Attachments
Patch
(16.40 KB, patch)
2012-03-21 07:48 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(16.90 KB, patch)
2012-03-21 08:58 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-03-21 07:48:53 PDT
Created
attachment 133039
[details]
Patch
Pavel Feldman
Comment 2
2012-03-21 08:17:52 PDT
Comment on
attachment 133039
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133039&action=review
> Source/WebCore/inspector/InspectorDOMAgent.cpp:726 > +void InspectorDOMAgent::getEventListenersForNode(ErrorString* error, int nodeId, RefPtr<InspectorArray>& listenersArray)
Please rebaseline
> Source/WebCore/inspector/InspectorDOMAgent.cpp:732 > + *error = "No such node";
Please use assertNode
Yury Semikhatsky
Comment 3
2012-03-21 08:58:10 PDT
Created
attachment 133052
[details]
Patch
Yury Semikhatsky
Comment 4
2012-03-21 08:59:47 PDT
(In reply to
comment #2
)
> (From update of
attachment 133039
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=133039&action=review
> > > Source/WebCore/inspector/InspectorDOMAgent.cpp:726 > > +void InspectorDOMAgent::getEventListenersForNode(ErrorString* error, int nodeId, RefPtr<InspectorArray>& listenersArray) > > Please rebaseline >
Done.
> > Source/WebCore/inspector/InspectorDOMAgent.cpp:732 > > + *error = "No such node"; > > Please use assertNode
Done.
Yury Semikhatsky
Comment 5
2012-03-21 09:10:02 PDT
Committed
r111549
: <
http://trac.webkit.org/changeset/111549
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug