Web Inspector: event listener section doesn't show all event listeners of the element ancestors https://bugs.webkit.org/show_bug.cgi?id=81782

Source/WebCore:

Event listeners section now contains all event listeners for the selected
element ancestors chain (in case option "All Nodes" is selected).

Reviewed by Pavel Feldman.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::getEventListenersForNode):
* inspector/front-end/EventListenersSidebarPane.js:
(WebInspector.EventListenersSidebarPane.prototype.update.callback):
(WebInspector.EventListenersSidebarPane.prototype.update):
(WebInspector.EventListenersSidebarPane.prototype):

LayoutTests:

Reviewed by Pavel Feldman.

* http/tests/inspector/elements-test.js:
(initialize_ElementTest.InspectorTest.expandSelectedElementEventListenersEventBars):
(initialize_ElementTest.InspectorTest.dumpSelectedElementEventListeners):
* inspector/elements/event-listener-sidebar-expected.txt:
* inspector/elements/event-listener-sidebar.html:
* platform/chromium/inspector/elements/event-listener-sidebar-expected.txt:

Canonical link: https://commits.webkit.org/99052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111549 268f45cc-cd09-0410-ab3c-d52691b4dbfc