Source/WebCore/inspector/front-end/EventListenersSidebarPane.js
@@ -81,10 +81,13 @@ WebInspector.EventListenersSidebarPane.prototype = {
             if (error)
                 return;
 
+            var selectedNodeOnly = "selected" === WebInspector.settings.eventListenersFilter.get();
             var sectionNames = [];
             var sectionMap = {};
             for (var i = 0; i < eventListeners.length; ++i) {
                 var eventListener = eventListeners[i];
+                if (selectedNodeOnly && (node.id !== eventListener.nodeId))
+                    continue;
                 eventListener.node = WebInspector.domAgent.nodeForId(eventListener.nodeId);
                 delete eventListener.nodeId; // no longer needed
                 if (/^function _inspectorCommandLineAPI_logEvent\(/.test(eventListener.handlerBody.toString()))
@@ -111,22 +114,25 @@ WebInspector.EventListenersSidebarPane.prototype = {
             sectionNames.sort();
             for (var i = 0; i < sectionNames.length; ++i) {
                 var section = sectionMap[sectionNames[i]];
-                section.update();
                 body.appendChild(section.element);
             }
         }
 
         if (node)
             node.eventListeners(callback);
+        this._selectedNode = node;
     },
 
-    _changeSetting: function(event)
+    willHide: function()
+    {
+        delete this._selectedNode;
+    },
+
+    _changeSetting: function()
     {
         var selectedOption = this.settingsSelectElement[this.settingsSelectElement.selectedIndex];
         WebInspector.settings.eventListenersFilter.set(selectedOption.value);
-
-        for (var i = 0; i < this.sections.length; ++i)
-            this.sections[i].update();
+        this.update(this._selectedNode);
     }
 }
 
@@ -148,37 +154,16 @@ WebInspector.EventListenersSection = function(title, nodeId, linkifier)
     delete this.propertiesElement;
     delete this.propertiesTreeOutline;
 
-    this.eventBars = document.createElement("div");
-    this.eventBars.className = "event-bars";
-    this.element.appendChild(this.eventBars);
+    this._eventBars = document.createElement("div");
+    this._eventBars.className = "event-bars";
+    this.element.appendChild(this._eventBars);
 }
 
 WebInspector.EventListenersSection.prototype = {
-    update: function()
-    {
-        // A Filtered Array simplifies when to create connectors
-        var filteredEventListeners = this.eventListeners;
-        if (WebInspector.settings.eventListenersFilter.get() == "selected") {
-            filteredEventListeners = [];
-            for (var i = 0; i < this.eventListeners.length; ++i) {
-                var eventListener = this.eventListeners[i];
-                if (eventListener.node.id === this._nodeId)
-                    filteredEventListeners.push(eventListener);
-            }
-        }
-
-        this.eventBars.removeChildren();
-        var length = filteredEventListeners.length;
-        for (var i = 0; i < length; ++i) {
-            var eventListener = filteredEventListeners[i];
-            var eventListenerBar = new WebInspector.EventListenerBar(eventListener, this._nodeId, this._linkifier);
-            this.eventBars.appendChild(eventListenerBar.element);
-        }
-    },
-
     addListener: function(eventListener)
     {
-        this.eventListeners.push(eventListener);
+        var eventListenerBar = new WebInspector.EventListenerBar(eventListener, this._nodeId, this._linkifier);
+        this._eventBars.appendChild(eventListenerBar.element);
     }
 }
 
